@@ -19,9 +19,9 @@ static int check_levelzero_backend(hwloc_topology_t topology)
 {
   hwloc_obj_t root = hwloc_get_root_obj(topology);
   unsigned i;
-  for(i=0; i<root->infos_count; i++)
-    if (!strcmp(root->infos[i].name, "Backend")
-        || !strcmp(root->infos[i].value, "LevelZero"))
+  for(i=0; i<root->infos.count; i++)
+    if (!strcmp(root->infos.array[i].name, "Backend")
+        || !strcmp(root->infos.array[i].value, "LevelZero"))
       return 1;
   return 0;
 }
