@@ -34,6 +34,8 @@ Version 3.0.0
     or "Memory" (for Linux DAX and CXL devices, etc).
   + The "Backend" info attribute of OS devices is now in the topology
     root object together with other backends.
+  + The array and count of info attributes are now embedded in the new
+    struct hwloc_infos_s.
 * Tools
   + lstopo has a new --osf option to tune the displaying of object
     attributes and units.
